--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,8 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics,prometheus
+        # include: health,info,metrics,prometheus
+        include: "*"
   endpoint:
     health:
       show-details: always
