--- a/application.yml
+++ b/application.yml
@@ -24,7 +24,13 @@ management:
   endpoint:
     health:
       show-details: always
-  metrics:
-    export:
-      prometheus:
-        enabled: true
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0  # 100% sampling rate
+    propagation:
+      type: w3c
+
+logging:
+  level:
+    root: info
